[package]
name = "rur"
version = "0.0.1"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description ="Robot control library for UniversaL Robots robot."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.0.0-beta.1"

