[package]
name = "rur"
version = "0.1.0"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
keywords = ["robot","robot_control","universal_robots","UR","urscript"]
repository = "https://github.com/MrBearing/rur"
edition = "2018"
license = "Apache-2.0"
description ="Robot control library for Universal Robots robot."
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.0.0-beta.1"

